fix overflow when change the ui zoom

--- a/src/styles/core/_reset.scss
+++ b/src/styles/core/_reset.scss
@@ -1,3 +1,7 @@
+body {
+    overflow: auto !important;
+    background-color: var(--bg);
+}
 video {
     outline: none;
 }
